[project]
name = "comfyui-wananimalpreprocess"
description = "ComfyUI nodes for animal pose estimation and preprocessing using AP10k/APT36k ViTPose models"
version = "1.1.0"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{ name = "Likhith-24" }]
dependencies = [
    "opencv-python>=4.8",
    "onnxruntime-gpu>=1.16",
    "onnx>=1.15",
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.urls]
Repository = "https://github.com/Likhith-24/ComfyUI-WanAnimalPreprocessor"
Issues = "https://github.com/Likhith-24/ComfyUI-WanAnimalPreprocessor/issues"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "likhith-24"
DisplayName = "ComfyUI-WanAnimalPreprocess"
Icon = "https://i.pinimg.com/736x/5d/52/19/5d5219ef27c1530bea027ff95d352e05.jpg"
