[project]
name = "ComfyUI-WanAnimalPreprocess"
description = "ComfyUI nodes for animal pose estimation and preprocessing using AP10k/APT36k ViTPose models"
version = "1.2.0"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{ name = "Code2Collapse" }]
dependencies = [
    "opencv-python>=4.8",
    "onnxruntime-gpu>=1.16",
    "onnx>=1.15",
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.urls]
Repository = "https://github.com/Code2Collapse/ComfyUI-WanAnimalPreprocess"
Issues = "https://github.com/Code2Collapse/ComfyUI-WanAnimalPreprocess/issues"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Code2Collapse"
DisplayName = "ComfyUI-WanAnimalPreprocess"
Icon = "https://i.pinimg.com/736x/5d/52/19/5d5219ef27c1530bea027ff95d352e05.jpg"
